--- a/.env.example
+++ b/.env.example
@@ -19,4 +19,9 @@ PYTH_ETH_USD_FEED_ID=0xff61491a931112ddf1bd8147cd1b641375f79f5825126d66548087463
 REPORT_GAS=true
 
 # ASI Agent Configuration
+ASI_AGENT_ADDRESS=0x... # Address of the ASI agent (if available)
 ASI_AGENT_PRIVATE_KEY=your_asi_agent_wallet_private_key_here
+
+# Deployment Configuration
+MIN_BET_AMOUNT=1000000 # 1 PYUSD (6 decimals)
+MAX_BET_AMOUNT=10000000000 # 10,000 PYUSD
